cambio de iconos y nombre

--- a/src/app/account/signup/signup.page.html
+++ b/src/app/account/signup/signup.page.html
@@ -11,7 +11,7 @@
 
   <ion-row>
     <ion-col>
-      <p style="color: rgb(82, 82, 82);font-family: 'SF Pro Display';font-weight: 400;">Unete a la familia <b>Carmen App</b></p>
+      <p style="color: rgb(82, 82, 82);font-family: 'SF Pro Display';font-weight: 400;">Unete a la familia <b>Troopers</b></p>
     </ion-col>
   </ion-row>
 
