--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <ion-menu swipe-gesture="true" type="push" side="start" id="side-menu">
       <ion-header no-border>
         <ion-toolbar color="primary">
-          <ion-title style="font-size:16px;">Bienvenido(a) a Carmen App</ion-title>
+          <ion-title style="font-size:16px;">Bienvenido(a) a Troopers</ion-title>
         </ion-toolbar>
       </ion-header>
       <ion-content>
